--- a/romeano/package.json
+++ b/romeano/package.json
@@ -70,6 +70,7 @@
     "react-dropzone": "^11.4.2",
     "react-error-boundary": "3.1.4",
     "react-hook-form": "7.19.0",
+    "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "serve-static": "^1.14.1",
     "ua-parser-js": "^1.0.2",
