--- a/romeano/package.json
+++ b/romeano/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "prepare": "cd .. && husky install romeano/.husky",
-    "postinstall": "set -eu -o pipefail && [ -d db/geoip ] || (mkdir -p db/geoip && wget -O - 'https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-City&license_key=YIvvlo88zRdlQ40h&suffix=tar.gz' | tar xz --strip-components=1 -C db/geoip)"
+    "postinstall": "set -eu pipefail && [ -d db/geoip ] || (mkdir -p db/geoip && wget -O - 'https://download.maxmind.com/app/geoip_download?edition_id=GeoLite2-City&license_key=YIvvlo88zRdlQ40h&suffix=tar.gz' | tar xz --strip-components=1 -C db/geoip)"
   },
   "prisma": {
     "schema": "db/schema.prisma",
