--- a/romeano/package.json
+++ b/romeano/package.json
@@ -73,6 +73,7 @@
     "react-hook-form": "7.19.0",
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
+    "react-responsive-carousel": "^3.2.23",
     "serve-static": "^1.14.1",
     "ua-parser-js": "^1.0.2",
     "zod": "3.11.6"
