--- a/romeano/package.json
+++ b/romeano/package.json
@@ -74,6 +74,7 @@
     "react-icons": "^4.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-responsive-carousel": "^3.2.23",
+    "responsive-html-email-template": "^1.0.0",
     "serve-static": "^1.14.1",
     "ua-parser-js": "^1.0.2",
     "zod": "3.11.6"
