--- a/romeano/package.json
+++ b/romeano/package.json
@@ -52,6 +52,7 @@
     "faker": "^5.5.3",
     "formidable": "^2.0.1",
     "fp-ts": "^2.11.4",
+    "handlebars": "^4.7.7",
     "husky": "7.0.4",
     "lint-staged": "11.2.6",
     "lodash": "^4.17.21",
