--- a/romeano/package.json
+++ b/romeano/package.json
@@ -55,6 +55,7 @@
     "formidable": "^2.0.1",
     "fp-ts": "^2.11.4",
     "handlebars": "^4.7.7",
+    "hashids": "^2.2.10",
     "husky": "7.0.4",
     "lint-staged": "11.2.6",
     "lodash": "^4.17.21",
