--- a/romeano/package.json
+++ b/romeano/package.json
@@ -32,6 +32,7 @@
     "@babel/cli": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@blitzjs/auth": "^2.0.0-alpha.69",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "2.8.3",
