--- a/romeano/package.json
+++ b/romeano/package.json
@@ -36,6 +36,7 @@
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "2.8.3",
+    "@hookform/error-message": "^2.0.0",
     "@maxmind/geoip2-node": "^3.2.0",
     "@mikemmb73/react-responsive-carousel2": "^3.2.24",
     "@prisma/client": "3.4.1",
