update readme, start local db instance

--- a/romeano/.env.development
+++ b/romeano/.env.development
@@ -7,3 +7,17 @@ DB_USER=postgres
 DB_PASS=password
 DB_NAME=romeano
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}"
+
+#default dev environment
+# APP_ENV=production
+# NODE_ENV=production
+
+# DB_HOST=romeano-db-prod.cuwlcrnxskmb.us-west-1.rds.amazonaws.com
+# DB_USER=postgres
+# DB_PASS=R0m3an0!
+# DB_NAME=romeano
+# DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}"
+# DISABLE_SECURE_COOKIES=true
+# ADMIN_EMAIL=ben@romeano.com
+# SESSION_SECRET_KEY=7315351265612463a4b54abf6792504d
+# DEV_EMAIL_RECIPIENT=surya@romeano.com
