--- a/romeano/package.json
+++ b/romeano/package.json
@@ -92,10 +92,11 @@
     "@types/faker": "^5.5.9",
     "@types/formidable": "^2.0.0",
     "@types/lodash": "^4.14.176",
-    "@types/node": "^16.11.6",
+    "@types/node": "18.11.9",
+    "@types/preview-email": "2.0.1",
+    "@types/react": "18.0.25",
+    "@typescript-eslint/eslint-plugin": "5.42.1",
     "@types/nodemailer": "^6.4.4",
-    "@types/preview-email": "^2.0.1",
-    "@types/react": "^17.0.34",
     "@types/serve-static": "^1.13.10",
     "@types/ua-parser-js": "^0.7.36",
     "@welldone-software/why-did-you-render": "^6.2.1",
