Test commit for husky

--- a/romeano/.env
+++ b/romeano/.env
@@ -1,1 +1,10 @@
-.env.development
+#default dev environment
+APP_ENV=development
+NODE_ENV=development
+DEV_EMAIL_RECIPIENT=surya@romeano.com
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=postgres
+DB_NAME=romeano
+DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}"
+PRISMA_QUERY_LOG="query"
