--- a/romeano/package.json
+++ b/romeano/package.json
@@ -35,14 +35,14 @@
     "@blitzjs/auth": "^2.0.0-alpha.69",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
-    "@hookform/resolvers": "2.8.3",
     "@hookform/error-message": "^2.0.0",
+    "@hookform/resolvers": "2.8.3",
     "@maxmind/geoip2-node": "^3.2.0",
     "@mikemmb73/react-responsive-carousel2": "^3.2.24",
     "@prisma/client": "3.4.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@trendyol-js/react-carousel": "2.0.1",
     "@types/react-html-email": "^3.0.1",
-    "@tailwindcss/line-clamp": "^0.4.0",
     "amplitude-js": "^8.18.4",
     "analytics": "^0.7.18",
     "aws-sdk": "^2.1181.0",
@@ -93,12 +93,12 @@
     "@types/formidable": "^2.0.0",
     "@types/lodash": "^4.14.176",
     "@types/node": "18.11.9",
-    "@types/preview-email": "2.0.1",
-    "@types/react": "18.0.25",
-    "@typescript-eslint/eslint-plugin": "5.42.1",
     "@types/nodemailer": "^6.4.4",
+    "@types/preview-email": "2.0.1",
+    "@types/react": "^17.0.34",
     "@types/serve-static": "^1.13.10",
     "@types/ua-parser-js": "^0.7.36",
+    "@typescript-eslint/eslint-plugin": "5.42.1",
     "@welldone-software/why-did-you-render": "^6.2.1",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.3.11",
