Update: DB Pass in env

--- a/romeano/.env.stage
+++ b/romeano/.env.stage
@@ -5,7 +5,7 @@ NODE_ENV=production
 #db_host is from dockerfile
 DB_HOST=db
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=password
 DB_NAME=romeano
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}"
 SESSION_SECRET_KEY=7315351265612463a4b54abf6792504d
