--- a/romeano/.env.development
+++ b/romeano/.env.development
@@ -4,6 +4,6 @@ NODE_ENV=development
 DEV_EMAIL_RECIPIENT=surya@romeano.com
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=password
 DB_NAME=romeano
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}"
