--- a/romeano/.env.production
+++ b/romeano/.env.production
@@ -6,7 +6,7 @@ SESSION_SECRET_KEY=7315351265612463a4b54abf6792504d
 # DATABASE
 DB_HOST=db
 DB_USER=postgres
-DB_PASS=postgres
+DB_PASS=password
 DB_NAME=romeano
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}"
 
