--- a/romeano/.env.development
+++ b/romeano/.env.development
@@ -4,7 +4,7 @@ NODE_ENV=development
 DEV_EMAIL_RECIPIENT=surya@romeano.com
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASS=password
+DB_PASS=postgres
 DB_NAME=romeano
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASS}@${DB_HOST}/${DB_NAME}"
 PRISMA_QUERY_LOG="query"
